doneWithProjectingAndStartToCreateGameProcess